// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TickIcon Theme: jobStreet Default 1`] = `
<svg
  class="atoms__width_standardText atoms__height_standardText Icon__block Box__root atoms__borderColor_standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: jobStreet Inline 1`] = `
<svg
  class="atoms__width_standardTextInline atoms__height_standardTextInline Icon__inline Box__root atoms__borderColor_standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: jobStreet Sized 1`] = `
<svg
  class="atoms__width_largeText atoms__height_largeText Icon__block Box__root atoms__borderColor_standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: seekAnz Default 1`] = `
<svg
  class="atoms__width_standardText atoms__height_standardText Icon__block Box__root atoms__borderColor_standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: seekAnz Inline 1`] = `
<svg
  class="atoms__width_standardTextInline atoms__height_standardTextInline Icon__inline Box__root atoms__borderColor_standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: seekAnz Sized 1`] = `
<svg
  class="atoms__width_largeText atoms__height_largeText Icon__block Box__root atoms__borderColor_standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: seekAsia Default 1`] = `
<svg
  class="atoms__width_standardText atoms__height_standardText Icon__block Box__root atoms__borderColor_standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: seekAsia Inline 1`] = `
<svg
  class="atoms__width_standardTextInline atoms__height_standardTextInline Icon__inline Box__root atoms__borderColor_standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: seekAsia Sized 1`] = `
<svg
  class="atoms__width_largeText atoms__height_largeText Icon__block Box__root atoms__borderColor_standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: wireframe Default 1`] = `
<svg
  class="atoms__width_standardText atoms__height_standardText Icon__block Box__root atoms__borderColor_standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: wireframe Inline 1`] = `
<svg
  class="atoms__width_standardTextInline atoms__height_standardTextInline Icon__inline Box__root atoms__borderColor_standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: wireframe Sized 1`] = `
<svg
  class="atoms__width_largeText atoms__height_largeText Icon__block Box__root atoms__borderColor_standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;
